fix: Adjust multi hit combo align on mobile

--- a/src/app/basic/input-autocomplete/input-autocomplete.component.scss
+++ b/src/app/basic/input-autocomplete/input-autocomplete.component.scss
@@ -19,6 +19,15 @@
   gap: 0.5em;
 }
 
+.input-row label {
+  white-space: nowrap;
+}
+
+.input-row > input {
+  width: auto;
+  flex: 1;
+}
+
 .input-column > input,
 .input-row > input {
   width: 96%;
