--- a/src/app/features/pokemon-build/pokemon-build-mobile/pokemon-build-mobile.component.scss
+++ b/src/app/features/pokemon-build/pokemon-build-mobile/pokemon-build-mobile.component.scss
@@ -20,6 +20,7 @@
 
 .edit-button-section {
   display: flex;
+  gap: 2em;
   margin-left: 1.5em;
 }
 
@@ -40,6 +41,7 @@
 }
 
 .hits-input {
+  margin-top: 0.5em;
   width: 50%;
 }
 
